--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Wed Mar 05 2025 12:06:03 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Mar 06 2025 18:29:57 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="67a3f214f6f419803c655301" data-wf-site="67a3f214f6f419803c6552fa">
 <head>
   <meta charset="utf-8">
@@ -48,7 +48,7 @@
               <div class="div-block-8-copy">
                 <h2 class="uui-heading-medium"><strong class="bold-text-19">All-in-one</strong> Solution</h2>
                 <div class="uui-text-size-large">WizeMice supports <strong class="bold-text-22">guitar, bass, MIDI instruments, and vocals</strong>, adapting to any setup. With diverse inputs and tailored presets, it’s a perfect tool for multi-instrumentalists.</div>
-              </div><img src="images/multi4-min.png" loading="lazy" data-w-id="26636001-0bcd-a5d5-5600-c1b05cacf1cc" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 90vw, (max-width: 1439px) 46vw, 607.953125px" alt="guit" srcset="images/multi4-min-p-500.png 500w, images/multi4-min-p-800.png 800w, images/multi4-min-p-1080.png 1080w, images/multi4-min.png 1181w" class="image-13"><img src="images/multi3-min.png" loading="lazy" data-w-id="248faab4-3e0e-765c-47bd-0d124e451b33" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 90vw, (max-width: 1439px) 46vw, 607.953125px" alt="bass" srcset="images/multi3-min-p-500.png 500w, images/multi3-min-p-800.png 800w, images/multi3-min-p-1080.png 1080w, images/multi3-min.png 1181w" class="image-14">
+              </div><img src="images/multi1-min.png" loading="lazy" data-w-id="26636001-0bcd-a5d5-5600-c1b05cacf1cc" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 90vw, (max-width: 1439px) 46vw, 607.953125px" alt="mic" srcset="images/multi1-min-p-500.png 500w, images/multi1-min-p-800.png 800w, images/multi1-min-p-1080.png 1080w, images/multi1-min.png 1181w" class="image-13"><img src="images/multi3-min.png" loading="lazy" data-w-id="248faab4-3e0e-765c-47bd-0d124e451b33" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 90vw, (max-width: 1439px) 46vw, 607.953125px" alt="bass" srcset="images/multi3-min-p-500.png 500w, images/multi3-min-p-800.png 800w, images/multi3-min-p-1080.png 1080w, images/multi3-min.png 1181w" class="image-14">
             </div>
             <div class="div-block-8">
               <h2 data-w-id="85a15eb5-d3f4-2cd5-f414-f331af428e55" style="opacity:0" class="uui-heading-medium">Built for Any<strong class="bold-text-19"> Instrument</strong></h2>
@@ -64,7 +64,7 @@
         <div class="uui-padding-vertical-xhuge">
           <div class="w-layout-grid uui-layout04_component">
             <div class="uui-layout04_content">
-              <h2 data-w-id="579de800-72ca-d50c-c0ae-2071340da3df" style="opacity:0" class="uui-heading-medium">Powerful &amp; Intuitive <strong class="bold-text-17">Software</strong></h2><img src="images/FX-chain-art.png" loading="lazy" sizes="100vw" srcset="images/FX-chain-art-p-500.png 500w, images/FX-chain-art-p-800.png 800w, images/FX-chain-art-p-1080.png 1080w, images/FX-chain-art.png 1091w" alt="wize chain" class="image-16">
+              <h2 data-w-id="579de800-72ca-d50c-c0ae-2071340da3df" style="opacity:0" class="uui-heading-medium">Powerful &amp; Intuitive <strong class="bold-text-17">Software</strong></h2><img src="images/FX-chain-art.png" loading="lazy" sizes="(max-width: 479px) 93vw, (max-width: 767px) 96vw, (max-width: 991px) 97vw, 100vw" srcset="images/FX-chain-art-p-500.png 500w, images/FX-chain-art-p-800.png 800w, images/FX-chain-art-p-1080.png 1080w, images/FX-chain-art.png 1091w" alt="wize chain" class="image-16">
               <div class="uui-space-xsmall"></div>
               <div data-w-id="579de800-72ca-d50c-c0ae-2071340da3e4" style="opacity:0" class="uui-text-size-large">WizeMice software delivers a blend of user-friendly design and advanced functionality. Its intuitive touchscreen interface streamlines effect navigation and customization, enabling effortless sound creation.<br><br>In addition to its full standalone functionality, <strong class="bold-text-20">the device pairs with a desktop &amp; mobile app</strong> to provide expanded control and seamless integration.</div>
               <div class="uui-button-row is-reverse-mobile-landscape-copy">
@@ -100,13 +100,13 @@
   <div class="div-block-11">
     <div data-current="Tab 2" data-easing="ease-in-out" data-duration-in="50" data-duration-out="50" class="tabs w-tabs">
       <div class="tabs-menu w-tab-menu">
-        <a data-w-tab="Tab 1" class="tab-link-tab-1 w-inline-block w-tab-link"><img sizes="(max-width: 479px) 38vw, (max-width: 1439px) 20vw, 256px" srcset="images/Frame-506-p-500.png 500w, images/Frame-506-p-800.png 800w, images/Frame-506-p-1080.png 1080w, images/wizetiny.png 1280w" alt="wizetiny" src="images/wizetiny.png" loading="lazy" class="image-19">
+        <a data-w-tab="Tab 1" class="tab-link-tab-1 w-inline-block w-tab-link"><img sizes="(max-width: 479px) 30vw, (max-width: 1439px) 20vw, 256px" srcset="images/Frame-506-p-500.png 500w, images/Frame-506-p-800.png 800w, images/Frame-506-p-1080.png 1080w, images/wizetiny.png 1280w" alt="wizetiny" src="images/wizetiny.png" loading="lazy" class="image-19">
           <h1 class="heading-4"><strong>Wize</strong>Tiny</h1>
         </a>
-        <a data-w-tab="Tab 2" class="tab-link-tab-2 w-inline-block w-tab-link w--current"><img sizes="(max-width: 479px) 38vw, (max-width: 991px) 19vw, (max-width: 1439px) 20vw, 250px" srcset="images/Frame-505-p-500.png 500w, images/Frame-505-p-800.png 800w, images/Frame-505-p-1080.png 1080w, images/wizecore.png 1280w" alt="wizecore front" src="images/wizecore.png" loading="lazy" class="image-20">
+        <a data-w-tab="Tab 2" class="tab-link-tab-2 w-inline-block w-tab-link w--current"><img sizes="(max-width: 479px) 30vw, (max-width: 991px) 19vw, (max-width: 1439px) 20vw, 250px" srcset="images/Frame-505-p-500.png 500w, images/Frame-505-p-800.png 800w, images/Frame-505-p-1080.png 1080w, images/wizecore.png 1280w" alt="wizecore front" src="images/wizecore.png" loading="lazy" class="image-20">
           <h1 class="heading-4"><strong>Wize</strong>Core</h1>
         </a>
-        <a data-w-tab="Tab 3" class="tab-link-tab-3 w-inline-block w-tab-link"><img sizes="(max-width: 767px) 10px, 1vw" srcset="images/Frame-504-p-500.png 500w, images/Frame-504-p-800.png 800w, images/Frame-504-p-1080.png 1080w, images/wizehub.png 1280w" alt="wize-hub front
+        <a data-w-tab="Tab 3" class="tab-link-tab-3 w-inline-block w-tab-link"><img sizes="(max-width: 479px) 30vw, (max-width: 1439px) 20vw, 255.984375px" srcset="images/Frame-504-p-500.png 500w, images/Frame-504-p-800.png 800w, images/Frame-504-p-1080.png 1080w, images/wizehub.png 1280w" alt="wize-hub front
 " src="images/wizehub.png" loading="lazy" class="image-20">
           <h1 class="heading-4"><strong>Wize</strong>Hub</h1>
         </a>
@@ -124,7 +124,7 @@
             </div>
             <div class="w-tab-content">
               <div data-w-tab="Tab 1" class="w-tab-pane w--tab-active"><img sizes="(max-width: 479px) 96vw, (max-width: 767px) 72vw, (max-width: 991px) 74vw, (max-width: 1439px) 75vw, 940px" srcset="images/Frame-506-p-500.png 500w, images/Frame-506-p-800.png 800w, images/Frame-506-p-1080.png 1080w, images/wizetiny.png 1280w" alt="wizetiny" src="images/wizetiny.png" loading="lazy"></div>
-              <div data-w-tab="Tab 2" class="w-tab-pane"><img sizes="100vw" srcset="images/Frame-524-p-500.png 500w, images/Frame-524-p-800.png 800w, images/Frame-524.png 1280w" alt="WizeTiny Back" src="images/Frame-524.png" loading="lazy"></div>
+              <div data-w-tab="Tab 2" class="w-tab-pane"><img sizes="(max-width: 479px) 96vw, (max-width: 767px) 72vw, (max-width: 991px) 74vw, (max-width: 1439px) 75vw, 940px" srcset="images/Frame-524-p-500.png 500w, images/Frame-524-p-800.png 800w, images/Frame-524.png 1280w" alt="WizeTiny Back" src="images/Frame-524.png" loading="lazy"></div>
             </div>
           </div>
           <h1 class="heading-5"><strong>Wize</strong>Tiny<strong class="bold-text-23">®</strong></h1>
@@ -164,7 +164,7 @@
               </div>
               <div class="w-tab-content">
                 <div data-w-tab="Tab 1" class="w-tab-pane w--tab-active"><img sizes="(max-width: 479px) 96vw, (max-width: 767px) 72vw, (max-width: 991px) 74vw, (max-width: 1439px) 75vw, 940px" srcset="images/Frame-505-p-500.png 500w, images/Frame-505-p-800.png 800w, images/Frame-505-p-1080.png 1080w, images/wizecore.png 1280w" alt="wizecore front" src="images/wizecore.png" loading="lazy" class="image-22"></div>
-                <div data-w-tab="Tab 2" class="w-tab-pane"><img sizes="100vw" srcset="images/Frame-523-p-500.png 500w, images/Frame-523-p-800.png 800w, images/Frame-523.png 1280w" alt="wizecore back" src="images/Frame-523.png" loading="lazy"></div>
+                <div data-w-tab="Tab 2" class="w-tab-pane"><img sizes="(max-width: 479px) 96vw, (max-width: 767px) 72vw, (max-width: 991px) 74vw, (max-width: 1439px) 75vw, 940px" srcset="images/Frame-523-p-500.png 500w, images/Frame-523-p-800.png 800w, images/Frame-523.png 1280w" alt="wizecore back" src="images/Frame-523.png" loading="lazy"></div>
               </div>
             </div>
             <h1 class="heading-5"><strong>Wize</strong>Core<strong class="bold-text-23">®</strong></h1>
@@ -207,9 +207,9 @@
                 </a>
               </div>
               <div class="w-tab-content">
-                <div data-w-tab="Tab 1" class="w-tab-pane w--tab-active"><img sizes="100vw" srcset="images/Frame-504-p-500.png 500w, images/Frame-504-p-800.png 800w, images/Frame-504-p-1080.png 1080w, images/wizehub.png 1280w" alt="wize-hub front
+                <div data-w-tab="Tab 1" class="w-tab-pane w--tab-active"><img sizes="(max-width: 479px) 96vw, (max-width: 767px) 72vw, (max-width: 991px) 74vw, (max-width: 1439px) 75vw, 940px" srcset="images/Frame-504-p-500.png 500w, images/Frame-504-p-800.png 800w, images/Frame-504-p-1080.png 1080w, images/wizehub.png 1280w" alt="wize-hub front
 " src="images/wizehub.png" loading="lazy"></div>
-                <div data-w-tab="Tab 2" class="w-tab-pane"><img sizes="100vw" srcset="images/Frame-522-p-500.png 500w, images/Frame-522-p-800.png 800w, images/Frame-522.png 1280w" alt="wizehub back" src="images/Frame-522.png" loading="lazy"></div>
+                <div data-w-tab="Tab 2" class="w-tab-pane"><img sizes="(max-width: 479px) 96vw, (max-width: 767px) 72vw, (max-width: 991px) 74vw, (max-width: 1439px) 75vw, 940px" srcset="images/Frame-522-p-500.png 500w, images/Frame-522-p-800.png 800w, images/Frame-522.png 1280w" alt="wizehub back" src="images/Frame-522.png" loading="lazy"></div>
               </div>
             </div>
             <h1 class="heading-5"><strong>Wize</strong>Hub<strong class="bold-text-23">®</strong></h1>
