Updating mailto link and style

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
       </div>
       <div class="footer-wrapper-three">
         <div class="w-layout-blockcontainer container-7 w-container"><img src="images/rato-branco.svg" loading="lazy" alt="wize isotype" class="image-5">
-          <div class="text-block-5">Wanna talk to us? Reach for: <strong class="bold-text-14">contact@wizemice.com</strong></div>
+          <div class="text-block-5">Wanna talk to us? Reach for: <a href="mailto:contact@wizemice.com"><strong class="bold-text-14">contact@wizemice.com</strong></a></div>
         </div>
         <div class="footer-social-block-three">
           <a href="https://www.instagram.com/wizemice/" target="_blank" class="footer-social-link-three w-inline-block"><img src="images/icons8-instagram.svg" loading="lazy" alt="insta logo" class="image-8"></a>
